Make "Build All" work.

--- a/src/OcsLogExplorer.Server/OcsLogExplorer.Server.fsproj
+++ b/src/OcsLogExplorer.Server/OcsLogExplorer.Server.fsproj
@@ -31,7 +31,7 @@
     <OutputPath>.\bin\Release</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>.\bin\Release\OcsLogExplorer.xml</DocumentationFile>
+    <DocumentationFile>.\bin\Release\OcsLogExplorer.Server.xml</DocumentationFile>
     <OtherFlags>--warnon:1182</OtherFlags>
   </PropertyGroup>
   <PropertyGroup>
