--- a/tests/OcsLogExplorer.Server.Tests/OcsLogExplorer.Server.Tests.fsproj
+++ b/tests/OcsLogExplorer.Server.Tests/OcsLogExplorer.Server.Tests.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -72,11 +72,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\..\src\OcsLogExplorer.Server\OcsLogExplorer.Server.fsproj">
-      <Name>OcsLogExplorer</Name>
-      <Project>{dea828d2-3437-48eb-8d56-6f6291181d96}</Project>
-      <Private>True</Private>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v2.0' Or $(TargetFrameworkVersion) == 'v3.0' Or $(TargetFrameworkVersion) == 'v3.5')">
@@ -149,5 +144,12 @@
       <Private>True</Private>
       <Paket>True</Paket>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\OcsLogExplorer.Server\OcsLogExplorer.Server.fsproj">
+      <Name>OcsLogExplorer.Server</Name>
+      <Project>{dea828d2-3437-48eb-8d56-6f6291181d96}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
 </Project>
