Fix ULS to match real ULS format, and not post-COSMOS ULS format + Add OCSULS, with our sessionIds.

--- a/src/OcsLogExplorer.Server/OcsLogExplorer.Server.fsproj
+++ b/src/OcsLogExplorer.Server/OcsLogExplorer.Server.fsproj
@@ -60,7 +60,7 @@
   <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
     <Compile Include="ULS.fs" />
-    <Compile Include="Library.fs" />
+    <Compile Include="OCSULS.fs" />
     <None Include="Script.fsx" />
     <None Include="paket.references" />
     <None Include="paket.template" />
