Return real Overview part 1 - initial routing and setup + cleanup

--- a/src/OcsLogExplorer.Server/OcsLogExplorer.Server.fsproj
+++ b/src/OcsLogExplorer.Server/OcsLogExplorer.Server.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="ULS.fs" />
     <Compile Include="OCSULS.fs" />
     <Compile Include="OcsDataModel.fs" />
+    <Compile Include="DataStore.fs" />
     <Compile Include="WebService.fs" />
     <None Include="Script.fsx" />
     <None Include="paket.references" />
